[package]
name = "toml-rs-ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'


[dependencies]
godot = { version = "0.2", default-features = false, features = ["api-4-1"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
